Use module name as reference and not module folder

--- a/view/designmoves-application/index/placeholder.phtml
+++ b/view/designmoves-application/index/placeholder.phtml
@@ -43,7 +43,7 @@
     <div id="wrapper">
       <h1><?php echo $this->escapeHtml($this->content); ?></h1>
       <p><?php echo $this->escapeHtml($this->content); ?></p>
-      <p>File: <code><?php echo $this->escapeHtml(substr(__FILE__, strrpos(__FILE__, 'module') + 7)); ?></code></p>
+      <p>File: <code><?php echo $this->escapeHtml(substr(__FILE__, strrpos(__FILE__, 'DesignmovesApplication'))); ?></code></p>
     </div>
   </body>
 </html>
