Added CSS padding

--- a/view/designmoves-application/index/placeholder.phtml
+++ b/view/designmoves-application/index/placeholder.phtml
@@ -15,6 +15,7 @@
     body {
         display: table-cell;
         font: normal 2em/1.4 Georgia;
+        padding: 1em;
         vertical-align: middle;
     }
     #wrapper {
