--- a/view/designmoves-application/index/placeholder.phtml
+++ b/view/designmoves-application/index/placeholder.phtml
@@ -1,6 +1,8 @@
-<h1><?php echo $this->escapeHtml($this->content); ?></h1>
-<p><?php echo $this->escapeHtml($this->content); ?></p>
-<p>File: <code><?php
+<?php $this->headTitle($this->content); ?>
+
+<h1 class="center"><?php echo $this->escapeHtml($this->content); ?></h1>
+<p class="center"><?php echo $this->escapeHtml($this->content); ?></p>
+<p class="center">File: <code><?php
 $offset = strrpos(__FILE__, 'module');
 if (false === $offset) {
     $offset = strrpos(__FILE__, 'vendor');
