--- a/view/layout/layout.phtml
+++ b/view/layout/layout.phtml
@@ -25,8 +25,8 @@
         border-radius: .3em;
         box-shadow: 0px 0px 10px 2px #333;
         color: #EFEFEF;
+        max-width: 950px;
         padding: 1em 2em;
-        text-align: center;
         text-shadow: 1px 1px 1px #000;
     }
     h1 {
@@ -36,7 +36,14 @@
         margin: 1em 0 0;
     }
     pre {
+        overflow: hidden;
         text-align: left;
+    }
+    pre:hover {
+        overflow: auto;
+    }
+    .center {
+        text-align: center;
     }
     -->
     </style>
